<resources>
    <string name="app_name">Travel Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--GENERAL-->
    <string name="no_internet">No tiene conexión a internet. Intente más tarde nuevamente</string>
    <string name="accept">Aceptar</string>

    <!--MENU-->
    <string name="my_trips_menu_title">Mis Viajes</string>
    <string name="old_trips_menu_title">Viajes Pasados</string>
    <string name="log_out_menu_title">Cerrar Sesión</string>
    <string name="log_out_msg">¿Está seguro de querer cerrar la sesión?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="edit_option">Editar</string>
    <string name="delete_option">Eliminar</string>

    <!--MY TRIPS-->
    <string name="current">Actual</string>
    <string name="next_trips">Próximos</string>
    <string name="no_data_available">No hay viajes. ¡Agregá uno!</string>
    <string name="my_trips_date_format">dd \'de\' MMMM \'de\' yyyy</string>
    <string name="my_trips_intent_filter_label">Agregar viaje a TravelKeeper</string>
    <string name="add_trip_to_library">¿Está seguro de querer agregar este viaje a sus viajes?</string>
    <string name="error_fetching_trip">No se encontró el viaje</string>
    <string name="trip_added_to_library">El viaje se agregó a sus viajes</string>
    <string name="trip_not_added_to_library">El viaje no se pudo agregar a sus viajes</string>
    <string name="remove_trip_from_library">¿Está seguro de eliminar este viaje de sus viajes?</string>
    <string name="trip_removed_from_library">El viaje se removió de sus viajes</string>
    <string name="trip_not_removed_from_library">No se pudo eliminar el viaje de sus viajes</string>

    <!--LOGIN-->
    <string name="title_activity_login">Acceder a Travel Keeper</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Falló el inicio de sesión"</string>
    <string name="register_failed">"Falló el registro de usuario"</string>
    <string name="new_trip_title">"Nuevo viaje"</string>

    <!--DESTINATIONS-->
    <string name="new_destination_title">"Nuevo destino"</string>
    <string name="title_activity_trip_time_line">Viaje</string>
    <string name="edit_destination_title">"Editar destino"</string>
    <string name="no_dest_available">No hay destinos. ¡Agregá uno!</string>
    <string name="dest_start_date">Fecha Inicio</string>
    <string name="dest_end_date">Fecha Fin</string>
    <string name="btn_new_dest">Listo</string>
    <string name="btn_edit_dest">Editar destino</string>
    <string name="remove_destination">¿Está seguro que desea eliminar el destino?</string>
    <string name="destination_removed">Destino removido exitosamente</string>
    <string name="destination_not_removed">No se pudo eliminar el destino. Intente nuevamente</string>
    <string name="pick_a_date">"Seleccione una fecha"</string>


    <!--NEW TRIP-->
    <string name="trip_name">Nombre del viaje</string>
    <string name="ready">Listo</string>
    <string name="add_new_destination">Agregar nuevo destino</string>

    <string name="edit_flight_title">Editar vuelo</string>
    <string name="remove_flight">¿Está seguro que desea eliminar el vuelo?</string>
    <string name="flight_removed">Vuelo removido exitosamente</string>
    <string name="flight_not_removed">No se pudo eliminar el vuelo. Intente nuevamente</string>

    <!--DOCUMENTS-->
    <string name="documents_title">"Documentos"</string>
    <string name="no_documents">No hay documentos. ¡Agregá uno!</string>
    <string name="fab_add_file">Agregar archivo</string>
    <string name="fab_add_photo">Tomar foto</string>

    <!--DOCUMENTS SHARE-->
    <string name="add_file_to_trip">"Adjuntar archivo al viaje"</string>
    <string name="add_file">"Adjuntar"</string>

    <!--VALIDATION-->
    <string name="error_message">Este campo es requerido</string>
    <string name="end_date_before_start_date">La fecha fin no puede ser menor a la fecha de inicio</string>

    <!--ACCOMMODATIONS-->
    <string name="accommodations_list">"Alojamientos"</string>
    <string name="no_accommodations_yet">No hay alojamientos. ¡Agregá uno!</string>
    <string name="new_accommodation">"Nuevo alojamiento"</string>
    <string name="accommodation_place">"Buscá tu alojamiento"</string>
    <string name="accommodation_name">"Nombre"</string>
    <string name="accommodation_address">"Direccion"</string>
    <string name="accommodation_checkin">"Fecha de entrada"</string>
    <string name="accommodation_checkout">"Fecha de salida"</string>
    <string name="accommodation_reservation_number">"Nro de reserva (opcional)"</string>
    <string name="accommodation_telephone_number">"Nro de teléfono (opcional)</string>
    <string name="btn_new_accommodation">Listo</string>
    <string name="btn_edit_accommodation">"Editar alojamiento"</string>
    <string name="remove_accommodation">¿Está seguro de eliminar el alojamiento?</string>
    <string name="accommodation_removed">El alojamiento fue removido exitosamente</string>
    <string name="accommodation_not_removed">No se pudo eliminar el alojamiento. Intente nuevamente</string>

    <!--MAP-->
    <string name="title_activity_accommodation_maps">Ubicación del alojamiento</string>

    <string name="fab_label_new_destination">Agregar destino</string>
    <string name="fab_label_new_flight">Agregar vuelo</string>
    <string name="airline_hint">Aerolínea</string>
    <string name="from_airport_hint">¿Desde dónde?</string>
    <string name="destination_airport_hint">¿A dónde?</string>
    <string name="takeoff_date_hint">Fecha de salida</string>
    <string name="flight_hour_hint">Hora del vuelo</string>
    <string name="flight_confirmation_code">Número de reserva</string>
    <string name="flight_number_hint">Número de vuelo</string>
    <string name="discard">Descartar</string>
    <string name="cancel">Cancelar</string>
    <string name="leave_activity_alert">¿Está seguro que desea salir sin guardar los cambios?</string>

    <string name="search_hint">Buscar aerolíneas</string>
</resources>
