<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditAccommodationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <TextView android:id="@+id/accommodation_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_name"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="12dp"/>
        <EditText
                android:id="@+id/enter_accommodation_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        <TextView android:id="@+id/enter_name_error"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/error_message"
                  android:visibility="gone"
                  android:textColor="@color/colorPrimary"
                  app:layout_constraintTop_toBottomOf="@id/enter_accommodation_name"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="12dp"/>

        <TextView android:id="@+id/accommodation_address"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_address"
                  app:layout_constraintTop_toBottomOf="@+id/enter_accommodation_name"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="12dp"/>
        <AutoCompleteTextView
                android:id="@+id/enter_accommodation_address"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        <TextView android:id="@+id/accommodation_checkin"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_checkin"
                  app:layout_constraintTop_toBottomOf="@id/enter_accommodation_address"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="12dp"/>
        <TextView
                android:id="@+id/accommodation_checkin_date_selected"
                android:text="@string/pick_a_date"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:background="?attr/editTextBackground"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_checkin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="12dp"/>

        <TextView android:id="@+id/checkin_date_error"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/error_message"
                  android:visibility="gone"
                  android:textColor="@color/colorPrimary"
                  app:layout_constraintTop_toBottomOf="@id/accommodation_checkin_date_selected"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="12dp"/>

        <TextView android:id="@+id/accommodation_checkout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_checkout"
                  app:layout_constraintTop_toBottomOf="@id/checkin_date_error"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="12dp"/>
        <TextView
                android:id="@+id/accommodation_checkout_date_selected"
                android:text="@string/pick_a_date"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:background="?attr/editTextBackground"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_checkout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="12dp"/>

        <TextView android:id="@+id/checkout_date_error"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/error_message"
                  android:visibility="gone"
                  android:textColor="@color/colorPrimary"
                  app:layout_constraintTop_toBottomOf="@id/accommodation_checkout_date_selected"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="12dp"/>

        <TextView android:id="@+id/accommodation_reservation_number"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_reservation_number"
                  app:layout_constraintTop_toBottomOf="@+id/checkout_date_error"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="12dp"/>
        <EditText
                android:id="@+id/enter_accommodation_reservation_number"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_reservation_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        <TextView android:id="@+id/accommodation_telephone_number"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/accommodation_telephone_number"
                  app:layout_constraintTop_toBottomOf="@+id/enter_accommodation_reservation_number"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="12dp"/>
        <EditText
                android:id="@+id/enter_accommodation_telephone_number"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/accommodation_telephone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        <Button
                android:id="@+id/edit_accommodation_button_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/btn_edit_accommodation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_accommodation_telephone_number"
                android:layout_marginTop="28dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
